deploy/kuber/kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: risk-main
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 90%
  # minReadySeconds: 5
  selector:
    matchLabels:
      app: risk-main
  template:
    metadata:
      labels:
        app: risk-main
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: risk-main
          imagePullPolicy: Always
          image: riskreg.azurecr.io/risk-main:latest
          ports:
            - containerPort: 9000
          readinessProbe:
            httpGet:
              path: /
              port: 9000
            initialDelaySeconds: 15
            periodSeconds: 5
            successThreshold: 1
          livenessProbe:
            httpGet:
              path: /
              port: 9000
            initialDelaySeconds: 15
            periodSeconds: 3
          resources:
            requests:
              cpu: "100m"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: risk-main
spec:
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9000
    - name: https
      protocol: TCP
      port: 443
      targetPort: 9443
  selector:
    app: risk-main
